drivers/gpu/drm/amd/amdgpu/amdgpu_cgs.c
@@ -834,6 +834,9 @@ static int amdgpu_cgs_get_active_displays_info(struct cgs_device *cgs_device,
 		return -EINVAL;
 
 	mode_info = info->mode_info;
+	if (mode_info)
+		/* if the displays are off, vblank time is max */
+		mode_info->vblank_time_us = 0xffffffff;
 
 	if (!amdgpu_device_has_dc_support(adev)) {
 		struct amdgpu_crtc *amdgpu_crtc;
